# ChangeLog for net-mail/cyrus-imap-admin
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-mail/cyrus-imap-admin/ChangeLog,v 1.88 2009/11/22 14:01:23 dertobi123 Exp $

*cyrus-imap-admin-2.3.15 (22 Nov 2009)

  22 Nov 2009; Tobias Scherbaum <dertobi123@gentoo.org>
  -cyrus-imap-admin-2.3.14-r1.ebuild, +cyrus-imap-admin-2.3.15.ebuild:
  Version bump, #285491

  28 Sep 2009; Tobias Scherbaum <dertobi123@gentoo.org>
  -cyrus-imap-admin-2.3.13.ebuild,
  -files/cyrus-imap-admin-2.3.13-kolab-annotations.patch,
  -files/KOLAB_cyrus-cyradm_Annotations.patch:
  Cleanup

  19 Jul 2009; nixnut <nixnut@gentoo.org> cyrus-imap-admin-2.3.14.ebuild:
  ppc stable #271800

  03 Jul 2009; Tobias Scherbaum <dertobi123@gentoo.org>
  cyrus-imap-admin-2.3.14.ebuild, cyrus-imap-admin-2.3.14-r1.ebuild:
  Fix compilation with USE='kerberos', #274838

*cyrus-imap-admin-2.3.14-r1 (12 Jun 2009)

  12 Jun 2009; Tobias Scherbaum <dertobi123@gentoo.org>
  +files/cyrus-imap-admin-2.3.14-kolab-annotations.patch,
  +cyrus-imap-admin-2.3.14-r1.ebuild:
  Revbump, include kolab-patches

  08 Jun 2009; Jeroen Roovers <jer@gentoo.org>
  cyrus-imap-admin-2.3.14.ebuild:
  Stable for HPPA (bug #271800).

  02 Jun 2009; Raúl Porcel <armin76@gentoo.org>
  cyrus-imap-admin-2.3.14.ebuild:
  sparc stable wrt #271800

  31 May 2009; Brent Baude <ranger@gentoo.org>
  cyrus-imap-admin-2.3.14.ebuild:
  Marking cyrus-imap-admin-2.3.14 ppc64 stable for bug 271800

  31 May 2009; Markus Meier <maekke@gentoo.org>
  cyrus-imap-admin-2.3.14.ebuild:
  amd64/x86 stable, bug #271800

*cyrus-imap-admin-2.3.14 (11 Apr 2009)

  11 Apr 2009; Tobias Scherbaum <dertobi123@gentoo.org>
  +cyrus-imap-admin-2.3.14.ebuild:
  Version bump

  16 Feb 2009; Tobias Scherbaum <dertobi123@gentoo.org>
  -cyrus-imap-admin-2.3.9.ebuild, -cyrus-imap-admin-2.3.11.ebuild,
  -cyrus-imap-admin-2.3.12_p2.ebuild:
  Cleanup

  16 Feb 2009; Tobias Scherbaum <dertobi123@gentoo.org>