@@ -2,7 +2,9 @@ AUX cyrus-imap-admin-2.2-fPIC.patch 584 RMD160 b66b94eacafb2f4bd59584701aa3e4a1f
 AUX cyrus-imap-admin-2.3.14-kolab-annotations.patch 2980 RMD160 2c36aab1b8fde7160bddd714e65515cde91c8eef SHA1 eda6d2e3aedc00ce93fe1ab8e8cf7c44b5f43c31 SHA256 853a730ddcd3198af10850fee5a1182acd4b20d610fc309409be14e3e004369d
 DIST cyrus-imapd-2.3.14.tar.gz 2348808 RMD160 03fd8bdef669786f58ddf8b3fa0e0a57b2ee6b69 SHA1 cf046e2399b5ae84c654c6ab04eb047341d93002 SHA256 fd840403c1f25adda8f003ea59169e2c87210c4e60ca47c498bda7060ed097a0
 DIST cyrus-imapd-2.3.15.tar.gz 2370826 RMD160 8981b94b6002a4aec38b7244794d4358032b9790 SHA1 271554c5e4f0e857a0af8e31f5d2b23642c0122d SHA256 66d94f442356bd14f0d21dea63a5138ca1197a603646dbaab596ab5453b85e7a
+DIST cyrus-imapd-2.3.16.tar.gz 2359349 RMD160 fa9d1462a7d7e839da9a11f52cddfd2ab854f2be SHA1 decc87045bfedb449d0af3512aa228090e558036 SHA256 e020ac79403a683bddc136c25887fe501edcc8d73b308982f4b68ec828ab63d2
 EBUILD cyrus-imap-admin-2.3.14.ebuild 1987 RMD160 83631ddde2c2ec84af9ca50106ae0d2f7005de25 SHA1 c7d97ae1bac136f29325eaa30d7437c89feb5ec4 SHA256 66b3e08ef45da1f8c5c8bebc0a72c1898bee11e8f3ee87e921a44013cd6b568a
 EBUILD cyrus-imap-admin-2.3.15.ebuild 1997 RMD160 35f572b5dc14fa70cd2257b25495c17d63538652 SHA1 da4ece33979fb82d0c1168127664ddccfabba447 SHA256 6bb3922950d5493e58a8fbc01e0b4370b85e6e9c7b10154a9a801b067ff8cd2e
-MISC ChangeLog 13200 RMD160 63fc05520813496d49aa4175f53d7215a8d6fa15 SHA1 e105f1dda6acb9839db25ac1ee77c22b3d72d7dc SHA256 7e2563eb3dba19ddbe3a2755609e30dbfd1ada1c8c0ca25329e68f8982bfc7b4
+EBUILD cyrus-imap-admin-2.3.16.ebuild 2016 RMD160 8de0658e61a284eab3dd4a64f809c13db821a7ea SHA1 38105b5ad3922adda2c5c8d1fd9cafbd598610d1 SHA256 e6519c739b263f6734dc82f7f4d0c98e25d565e7eb995cd55dc89622925b85b9
+MISC ChangeLog 13400 RMD160 92dbb2bbf566830a96a6ad150111dc42b489af94 SHA1 1f06ebbafb5b526accfaa45c51b500b1172afee5 SHA256 4495896e1382b82b2ee38bda2cdfe1da260dd4c06020dec3697c747cdc5be0ae
 MISC metadata.xml 227 RMD160 dea45630aba3c22da6ccfe5867e88797658a9e41 SHA1 82018ee8f0b71c0e29e01aa374a89275a46dde26 SHA256 d3c03c4962fef1e25acac4875ada3102e5122e3eb7292d83d9833df8ef581d5c
