@@ -1,6 +1,12 @@
 # ChangeLog for net-mail/cyrus-imap-admin
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-mail/cyrus-imap-admin/ChangeLog,v 1.88 2009/11/22 14:01:23 dertobi123 Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-mail/cyrus-imap-admin/ChangeLog,v 1.89 2009/12/31 09:23:18 dertobi123 Exp $
+
+*cyrus-imap-admin-2.3.16 (31 Dec 2009)
+
+  31 Dec 2009; Tobias Scherbaum <dertobi123@gentoo.org>
+  +cyrus-imap-admin-2.3.16.ebuild:
+  Version bump, also install perl-modules into vendor-dir (#295170)
 
 *cyrus-imap-admin-2.3.15 (22 Nov 2009)
 
